--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
 <body>
     {% include 'header.html' %}
-    <main style="height: 100vh;">
+    <main>
         {% block content %}{% endblock %}
     </main>
 
