--- a/templates/index_template.html
+++ b/templates/index_template.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="container">
         <ul class="posts">
-            {% for post in posts %}
+            {% for post in posts|reverse %}
             <li>
                 <a class="title" href="{{ post.url }}">{{ post.title }}</a>
                 <br>
