--- a/templates/header.html
+++ b/templates/header.html
@@ -14,7 +14,7 @@
     <ul class="contact">
 
         <li>
-            <a href="#">
+            <a href="https://abdalsamieali.github.io/">
             <img  class="icon" src="{{ basics.icon }}" width="24" alt="Website">
             </a>
         </li>
