--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ table {
         }
         th {
             background-color: #2c3e50;
-            color: white;
+            color: var(--p-color);
             text-align: left;
             padding: 12px;
         }
@@ -197,11 +197,13 @@ table {
             padding: 10px;
         }
         tr:nth-child(even) {
-            background-color: #f8f9fa;
+            background-color: #A9A9A9;
         }
-        tr:hover {
+
+      /*  tr:hover {
             background-color: #e8f4f8;
-        }
+        }  */
+
         .code {
             font-weight: bold;
             color: #2c3e50;
